--- a/index.html
+++ b/index.html
@@ -1,5 +1,149 @@
-<html>
-<body>
-This is test...
+<!DOCTYPE html>
+<!--[if IE 8]><html class="lt-ie10 lt-ie9"> <![endif]-->
+<!--[if IE 9]><html class="lt-ie10"> <![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ko"> <!--<![endif]-->
+<head>    
+    <meta charset="utf-8">
+	<meta name="robots" content="index,follow">
+	
+    <title>카지노 | 바카라사이트 - BEST</title>    
+    <meta name="description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라, 블랙잭, 룰렛, 식보, 슬롯머신, 우리카지노 등 안전검증된 곳만 제공하는 온라인카지노 추천사이트입니다.">
+	
+	<meta name="keywords" content="바카라사이트, 카지노사이트, 온라인바카라, 온라인카지노, 인터넷바카라, 인터넷카지노, 바카라주소, 바카라추천, 카지노주소, 카지노추천">
+	
+	<link rel="canonical" href="https://www.bas779.com">
+	
+	<meta property="og:url" content="https://www.bas779.com">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="카지노 | 바카라사이트 - BEST">
+	<meta property="og:title" content="카지노 | 바카라사이트 - BEST">
+	<meta property="og:description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라, 블랙잭, 룰렛, 식보, 슬롯머신, 우리카지노 등 안전검증된 곳만 제공하는 온라인카지노 추천사이트입니다.">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	
+	<link rel="shortcut icon" href="/img/favicon.jpg">
+	<link rel="apple-touch-icon-precomposed" href="/img/favicon.jpg">
+		
+	<!-- Bootstrap Core CSS -->
+	<link href="/css/bootstrap.min.css" rel="stylesheet">
+ 
+	<!-- Custom CSS -->
+	<link href="/css/five.css" rel="stylesheet">
+	
+	<!-- Custom Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,600,600italic' rel='stylesheet' type='text/css'>
+ 
+</head>
+<body id="page-top" class="index">
+<style type="text/css">
+#main_top { max-width:1200px; margin:0 auto; }
+body { no-repeat top center fixed; }
+/*
+body { background:url(img/header-bg.jpg) no-repeat top center fixed; }
+*/
+</style>
+
+<!--
+<div id="main_top">
+ <img src="/img/main_01.jpg" width="100%" >
+</div>
+-->
+
+<div id="main_top">
+ <img src="/img/main_02.jpg" width="100%" >
+</div>
+
+<section id="portfolio" class="bg-light-gray">
+  <div class="container">
+  <!--
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Headline</h2>
+        <div class="line"></div>
+      </div>
+    </div>
+	-->
+    <div class="row">
+	
+	<!--
+      <div class="col-md-4 col-sm-6 portfolio-item"> <a href="" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"><img src="/img/icon.png" class="img-responsive" alt="바로가기"></div>
+        </div>
+        <img src="" class="img-responsive" alt=""> </a>
+        <div class="portfolio-caption">
+          <h4></h4>
+          <p class="text-muted"></p>
+        </div>
+      </div>
+	  
+      <div class="col-md-4 col-sm-6 portfolio-item"> <a href="" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"><img src="/img/icon.png" class="img-responsive" alt="바로가기"></div>
+        </div>
+        <img src="" class="img-responsive" alt=""> </a>
+        <div class="portfolio-caption">
+          <h4></h4>
+          <p class="text-muted"></p>
+        </div>
+      </div>
+	  
+	  <div class="col-md-4 col-sm-6 portfolio-item"> <a href="" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"><img src="/img/icon.png" class="img-responsive" alt="바로가기"></div>
+        </div>
+        <img src="" class="img-responsive" alt=""> </a>
+        <div class="portfolio-caption">
+          <h4></h4>
+          <p class="text-muted"></p>
+        </div>
+      </div>
+	  -->
+	  
+      <div class="col-md-4 col-sm-6 portfolio-item"> <a href="http://www.zska22.com" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
+        </div>
+        <img src="/img/portfolio/first.jpg" class="img-responsive" alt="퍼스트 카지노"> </a>
+        <div class="portfolio-caption">
+          <h4><b>퍼스트 카지노</b></h4>		  
+		  <p class="text-muted">우리카지노 계열, 다양한 이벤트 진행중!!!</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item"> <a href="http://yt-cgn.com" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
+        </div>
+        <img src="/img/portfolio/royalclub.jpg" class="img-responsive" alt="로얄클럽 카지노"> </a>
+        <div class="portfolio-caption">
+          <h4><b>로얄클럽 카지노</b></h4>
+          <p class="text-muted">우리카지노 계열, 다양한 이벤트 진행중!!!</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item"> <a href="" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
+        </div>
+        <img src="/img/inquiry/inquiry.jpg" class="img-responsive" alt="준비중"> </a>
+        <div class="portfolio-caption">
+          <h4><b>준비중</b></h4>
+          <p class="text-muted">&nbsp;</p>
+        </div>
+      </div>
+	  	  
+    </div>
+  </div>
+</section>
+ 
+<!-- Bootstrap Core JavaScript -->
+<script src="/js/bootstrap.min.js"></script>
+ 
+<!-- Custom Theme JavaScript -->
+<script src="/js/five.js"></script>
+
 </body>
 </html>
