--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="robots" content="index,follow">
 	
     <title>카지노 | 바카라사이트 - BEST</title>    
-    <meta name="description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라, 블랙잭, 룰렛, 식보, 슬롯머신, 우리카지노 등 안전검증된 곳만 제공하는 온라인카지노 추천사이트입니다.">
+    <meta name="description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라, 블랙잭, 룰렛, 슬롯머신, 우리카지노 등 안전검증된 곳만 제공하는 온라인카지노 추천사이트입니다.">
 	
 	<meta name="keywords" content="바카라사이트, 카지노사이트, 온라인바카라, 온라인카지노, 인터넷바카라, 인터넷카지노, 바카라주소, 바카라추천, 카지노주소, 카지노추천">
 	
@@ -17,7 +17,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="카지노 | 바카라사이트 - BEST">
 	<meta property="og:title" content="카지노 | 바카라사이트 - BEST">
-	<meta property="og:description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라, 블랙잭, 룰렛, 식보, 슬롯머신, 우리카지노 등 안전검증된 곳만 제공하는 온라인카지노 추천사이트입니다.">
+	<meta property="og:description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라, 블랙잭, 룰렛, 슬롯머신, 우리카지노 등 안전검증된 곳만 제공하는 온라인카지노 추천사이트입니다.">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
@@ -104,16 +104,7 @@ body { background:url(img/header-bg.jpg) no-repeat top center fixed; }
       </div>
 	  -->
 	  
-      <div class="col-md-4 col-sm-6 portfolio-item"> <a href="http://www.zska22.com" target="_blank" class="portfolio-link" >
-        <div class="portfolio-hover">
-          <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
-        </div>
-        <img src="/img/portfolio/first.jpg" class="img-responsive" alt="퍼스트 카지노"> </a>
-        <div class="portfolio-caption">
-          <h4><b>퍼스트 카지노</b></h4>		  
-		  <p class="text-muted">우리카지노 계열, 다양한 이벤트 진행중!!!</p>
-        </div>
-      </div>
+      	  
       <div class="col-md-4 col-sm-6 portfolio-item"> <a href="http://yt-cgn.com" target="_blank" class="portfolio-link" >
         <div class="portfolio-hover">
           <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
@@ -124,7 +115,19 @@ body { background:url(img/header-bg.jpg) no-repeat top center fixed; }
           <p class="text-muted">우리카지노 계열, 다양한 이벤트 진행중!!!</p>
         </div>
       </div>
+	  
       <div class="col-md-4 col-sm-6 portfolio-item"> <a href="" target="_blank" class="portfolio-link" >
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
+        </div>
+        <img src="/img/inquiry/inquiry.jpg" class="img-responsive" alt="준비중"> </a>
+        <div class="portfolio-caption">
+          <h4><b>준비중</b></h4>
+          <p class="text-muted">&nbsp;</p>
+        </div>
+      </div>
+	  
+	  <div class="col-md-4 col-sm-6 portfolio-item"> <a href="" target="_blank" class="portfolio-link" >
         <div class="portfolio-hover">
           <div class="portfolio-hover-content"> <img src="/img/icon.png" class="img-responsive" alt="바로가기"> </div>
         </div>
