--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <meta property="og:title" content="카지노 | 바카라사이트 - BEST">
 <meta property="og:description" content="카지노 | 바카라사이트 - BEST에 오신걸 환영합니다. 바카라사이트,카지노사이트,온라인바카라,온라인카지노,인터넷바카라,인터넷카지노,바카라주소,바카라추천,카지노주소,카지노추천,바카라,카지노,사설바카라,사설카지노,우리카지노">
 
-
+<link rel="canonical" href="https://www.bas779.com">
+	
 <br><br>
 
 
@@ -24,7 +25,7 @@
      <p style="text-align: center; " align="center"><b><span style="color: rgb(58, 50, 195); font-size: 16pt;">카지노사이트 인터넷바카라 인터넷카지노 (이미지클릭)</span><br></b></p>
 
         <div class="content_img">
-            <center><a href="https://www.kms79.com/" target="_blank" rel="nofollow"><img alt="" src="images/total.jpg"></a></center> <!? 사각박스안에 들어가는 이미지경로 ?>
+            <center><a href="https://www.kms79.com/" target="_blank" rel="nofollow"><img alt="바카라사이트" src="images/total.jpg" ></a></center> <!? 사각박스안에 들어가는 이미지경로 ?>
           </div>
           <div class="content_info">
 		  <br><br>
